crates/pink/runtime/tests/snapshots/test_pink_contract__ink_cross_contract_instanciate.snap
---
source: crates/pink/runner/tests/test_pink_contract.rs
assertion_line: 124
expression: result
---
ContractResult {
    gas_consumed: Weight {
        ref_time: 2106925205,
        proof_size: 36732,
    },
    gas_required: Weight {
        ref_time: 97203631081,
        proof_size: 2105952,
    },
    storage_deposit: StorageDeposit::Charge(
        2,
    ),
    debug_message: [],
    result: Ok(
        InstantiateReturnValue {
            result: ExecReturnValue {
                flags: (empty),
                data: [],
            },
            account_id: 056a8ab55cc7f7405e121302a0af5b46d8c5fd78d2dbc8c2ac994802bdfb71dc (5CBokECH...),
        },
    ),
}
