crates/pink/runtime/tests/snapshots/test_pink_contract__ink_cross_contract_instantiate.snap
---
source: crates/pink/runtime/tests/test_pink_contract.rs
assertion_line: 116
expression: result
---
ContractResult {
    gas_consumed: Weight {
        ref_time: 3125415497,
        proof_size: 37600,
    },
    gas_required: Weight {
        ref_time: 3703360905,
        proof_size: 1086176,
    },
    storage_deposit: StorageDeposit::Charge(
        283,
    ),
    debug_message: [],
    result: Ok(
        InstantiateReturnValue {
            result: ExecReturnValue {
                flags: (empty),
                data: [],
            },
            account_id: 056a8ab55cc7f7405e121302a0af5b46d8c5fd78d2dbc8c2ac994802bdfb71dc (5CBokECH...),
        },
    ),
    events: None,
}
