crates/pink/runtime/tests/snapshots/test_pink_contract__ink_flip-2.snap
---
source: crates/pink/runner/tests/test_pink_contract.rs
assertion_line: 60
expression: cluster.effects.take()
---
Some(
    V1 {
        pink_events: [],
        ink_events: [],
        instantiated: [
            (
                0101010101010101010101010101010101010101010101010101010101010101 (5C62Ck4U...),
                35db55bc9f81c9b14ae536cc43c37786f3ff62fe5247a4dccfd7ba3c8bf316af (5DHKYvFE...),
            ),
        ],
    },
)
