crates/pink/runtime/tests/snapshots/test_pink_contract__ink_flip.snap
---
source: crates/pink/runtime/tests/test_pink_contract.rs
assertion_line: 46
expression: result
---
ContractResult {
    gas_consumed: Weight {
        ref_time: 1004638278,
        proof_size: 24635,
    },
    gas_required: Weight {
        ref_time: 1582359686,
        proof_size: 1073211,
    },
    storage_deposit: StorageDeposit::Charge(
        126,
    ),
    debug_message: [],
    result: Ok(
        InstantiateReturnValue {
            result: ExecReturnValue {
                flags: (empty),
                data: [],
            },
            account_id: 35db55bc9f81c9b14ae536cc43c37786f3ff62fe5247a4dccfd7ba3c8bf316af (5DHKYvFE...),
        },
    ),
    events: None,
}
